--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="row main_contant block flex-wrap lg:flex">
             <div class="left_src w-full lg:w-1/3 px-3 md:w-full  lg:sticky top-0 h-full">
-                <div class="left_profile bg-white rounded-md p-6">
+                <div class="left_profile bg-white rounded-md px-3 py-6 lg:p-6">
                     <div class="left_profile_img mb-4 text-center">
                         <img class="w-28 m-auto border-dotted border border-rose-600 rounded-full p-1" src="image/mukesh.png">
                     </div>
@@ -141,8 +141,8 @@
                 </div>
             </div>
             <div class="right_src w-full lg:w-2/3 md:w-full px-3">
-                <div class="header rounded-md bg-white flex justify-between py-4 items-center px-6">
-                    <a href="#"><img class="logo w-44" src="image/logo_img.png"></a>
+                <div class="header hidden  rounded-md bg-white lg:flex justify-between py-4 items-center px-6">
+                    <a class="" href="#"><img class="logo w-44" src="image/logo_img.png"></a>
                     <nav class="font-bold hidden lg:block">
                         <ul class="flex  space-x-10" >
                             <li class="font-medium hover:text-red-600 cursor-pointer"><a href="#home"> Home</a></li>
@@ -154,7 +154,7 @@
                         </ul>
                     </nav>
                 </div>
-                <div id="home" class="self_info flex flex-wrap bg-white rounded-md px-6 py-10 my-6">
+                <div id="home" class="self_info flex flex-wrap bg-white rounded-md px-3 lg:px-6 py-10 my-6">
                     <div class="self_info_contant w-full  lg:w-4/6">
                         <h3 class="text-red-500 mb-1">Welcome To My Website.</h3>
                         <h2 class="text-3xl font-medium mb-3">Hi, I'm Mukesh!
@@ -340,7 +340,7 @@
                     <h2 class="text-center text-3xl text-red-500 font-medium mb-6" >Get In Touch</h2>
                     <div class="contact_form_row block lg:flex flex-wrap">
                         <div class="contact_form_left w-full lg:w-2/3 px-0 lg:px-3">
-                            <form class="bg-white px-6 py-7 rounded-md">
+                            <form class="bg-white px-3 lg:px-6 py-7 rounded-md">
                                 <h3 class="font-medium text-2xl mb-4 ">Let's Connect</h3>
                                 <div class="form_info_row mb-4 block lg:flex flex-wrap justify-between">
                                     <div class="form_info w-full lg:w-1/2 p-0 lg:pr-2 mb-4 lg:mb-0">
