update all files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             position: fixed;
             width: 93.5%;
             top: 10px;
-            background: rgb(229 231 235 / var(--tw-bg-opacity));
+            background: rgb(229 231 235 / var(--tw-bg-opacity));z-index: 9;
         }
         .fixed-header .main_contant {
             margin-top: 90px;
@@ -193,7 +193,7 @@
                     </div>
                 </div>
                 <div id="skill" class="skill_all my-9 lg:my-12">
-                    <h2 class="text-center text-3xl text-red-500 font-medium mb-3" data-aos="fade-up" data-aos-duration="1000">Skills</h2>
+                    <h2 class="text-center text-3xl text-red-500 font-medium mb-3" data-aos="fade-up" data-aos-duration="1500">Skills</h2>
                     <ul class="flex flex-wrap justify-center skill_all_list">
                         <li class="w-1/3 lg:w-1/5 text-center py-3 lg:py-4 px-2 lg:px-3" data-aos="fade-up" data-aos-duration="1500"><a href="https://www.w3schools.com/html" target="_blank">
                             <div class="skill_img bg-white rounded-md p-5"><img class="m-auto w-16 h-16 object-contain" src="image/html.png"></div>
